# TestGit

./: .appveyor.yml  .appveyor.yml.old  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.linux  Makefile.osx  README.md  appveyor.yml  cards.cpp  main  main.cpp  read.h  sim.cpp  tyrant.h  tyrant_optimize.cpp
data/: SimpleTUOptimizeStarter.ini  raids.xml
test/: test.txt
