cmake_minimum_required(VERSION 2.8)
#FIND_PACKAGE( Boost 1.59 COMPONENTS program_options REQUIRED )
#set(Boost_INCLUDE_DIR "C:/Libraries/boost_1_59_0")
#set(Boost_LIBRARY_DIR "C:/Libraries/boost_1_59_0/lib32-msvc-14.0")
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
#link_directories(${Boost_LIBRARY_DIR})
project(main)
add_executable(main main.cpp)
target_link_libraries(main ${Boost_LIBRARIES})
